[package]
name = "turbo-tailwind"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anyhow = "1"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10"
tokio = "1.25.0"
turbo-tasks = { git = "https://github.com/vercel/turbo.git", rev = "81c04cb" }
turbo-tasks-fs = { git = "https://github.com/vercel/turbo.git", rev = "81c04cb" }
turbo-tasks-memory = { git = "https://github.com/vercel/turbo.git", rev = "81c04cb" }

[build-dependencies]
turbo-tasks-build = { git = "https://github.com/vercel/turbo.git", rev = "81c04cb" }
